--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "@wdio/spec-reporter": "^9.20.0"
   },
   "scripts": {
-    "test": "wdio run ./wdio.conf.js"
+    "test": "wdio run ./wdio.conf.js",
+    "test:ui": "wdio run ./wdio.conf.js",
+    "test:api": "mocha test/api --reporter spec"
   },
   "dependencies": {
     "axios": "^1.13.2",
