--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,9 +1,6 @@
 name: WDIO CI
 
 on:
-  push:
-    branches:
-      - developer
   schedule:
     - cron: '0 */2 * * *'
   workflow_dispatch:
@@ -19,7 +16,7 @@ jobs:
           node-version: '18'
       - run: npm ci
       - run: npm run test:ui
-      - uses: actions/upload-artifact@v3
+      - uses: actions/upload-artifact@v4
         with:
           name: ui-test-reports
           path: reports/
@@ -31,10 +28,10 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-          node-version: 'latest'
+          node-version: '18'
       - run: npm ci
       - run: npm run test:api
-      - uses: actions/upload-artifact@v3
+      - uses: actions/upload-artifact@v4
         with:
           name: api-test-reports
           path: reports/
