--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "devDependencies": {
     "@wdio/allure-reporter": "^9.20.0",
     "@wdio/cli": "^9.20.0",
+    "@wdio/devtools-service": "^10.0.1",
     "@wdio/junit-reporter": "^9.20.0",
     "@wdio/local-runner": "^9.20.0",
     "@wdio/mocha-framework": "^9.20.0",
-    "@wdio/spec-reporter": "^9.20.0"
+    "@wdio/spec-reporter": "^9.20.0",
+    "chromedriver": "^142.0.3"
   },
   "scripts": {
     "test": "wdio run ./wdio.conf.js",
