--- a/package.json
+++ b/package.json
@@ -1,4 +1,4 @@
-{
+ {
   "name": "newtestingproject",
   "type": "module",
   "devDependencies": {
@@ -7,12 +7,16 @@
     "@wdio/junit-reporter": "^9.20.0",
     "@wdio/local-runner": "^9.20.0",
     "@wdio/mocha-framework": "^9.20.0",
-    "@wdio/spec-reporter": "^9.20.0"
+    "@wdio/spec-reporter": "^9.20.0",
+    "mocha": "^10.2.0"
   },
   "scripts": {
-    "test": "wdio run ./wdio.conf.js"
+    "test": "wdio run ./wdio.conf.js",
+    "test:ui": "npm test",
+    "test:api": "mocha test/api/api.test.js --reporter spec"
   },
   "dependencies": {
+    "axios": "^1.13.2",
     "chai": "^6.2.1"
   }
 }
