--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,6 +4,10 @@ on:
   schedule:
     - cron: '0 */2 * * *'
   workflow_dispatch:
+  push:
+    branches: [developer, main]
+  pull_request:
+    branches: [main]
 
 jobs:
   ui_tests:
@@ -33,13 +37,56 @@ jobs:
 
       - name: Run UI Tests
         run: npm run test:ui -- --spec test/specs/${{ matrix.spec }}
+        continue-on-error: true
 
-      - name: Upload UI Test Reports
+      - name: Upload Allure Results
         uses: actions/upload-artifact@v4
-        if: failure()
+        if: always()
         with:
-          name: ui-test-reports-${{ matrix.spec }}
-          path: reports/
+          name: allure-results-${{ matrix.spec }}
+          path: reports/allure-results/
+          retention-days: 5
+
+  generate_report:
+    name: Generate Allure Report
+    needs: ui_tests
+    runs-on: ubuntu-latest
+    if: always()
+
+    steps:
+      - name: Checkout Code
+        uses: actions/checkout@v4
+
+      - name: Download All Allure Results
+        uses: actions/download-artifact@v4
+        with:
+          path: allure-results
+          pattern: allure-results-*
+          merge-multiple: true
+
+      - name: Get Allure History
+        uses: actions/checkout@v4
+        if: always()
+        continue-on-error: true
+        with:
+          ref: gh-pages
+          path: gh-pages
+
+      - name: Generate Allure Report
+        uses: simple-elf/allure-report-action@master
+        if: always()
+        with:
+          allure_results: allure-results
+          allure_history: allure-history
+          keep_reports: 20
+
+      - name: Deploy to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v3
+        if: always()
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_branch: gh-pages
+          publish_dir: allure-history
 
   api_tests:
     name: API Tests
@@ -60,10 +107,3 @@ jobs:
 
       - name: Run API Tests
         run: npm run test:api
-
-      - name: Upload API Test Reports
-        uses: actions/upload-artifact@v4
-        if: failure()
-        with:
-          name: api-test-reports
-          path: reports/
