--- a/package.json
+++ b/package.json
@@ -1,4 +1,4 @@
- {
+{
   "name": "newtestingproject",
   "type": "module",
   "devDependencies": {
@@ -9,12 +9,16 @@
     "@wdio/local-runner": "^9.20.0",
     "@wdio/mocha-framework": "^9.20.0",
     "@wdio/spec-reporter": "^9.20.0",
+    "allure-commandline": "^2.34.1",
     "mocha": "^10.2.0"
   },
   "scripts": {
     "test": "wdio run ./wdio.conf.js",
     "test:ui": "npm test",
-    "test:api": "mocha test/api/api.test.js --reporter spec"
+    "test:api": "mocha test/api/api.test.js --reporter spec",
+    "allure:generate": "npx allure generate reports/allure-results --clean -o allure-report",
+    "allure:open": "npx allure open allure-report",
+    "allure:report": "npm run allure:generate && npm run allure:open"
   },
   "dependencies": {
     "axios": "^1.13.2",
