--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,137 +1,69 @@
 name: Test Pipeline
 
 on:
-    schedule:
-        - cron: '0 */2 * * *'
-    workflow_dispatch:
-    push:
-        branches: [developer, main]
-    pull_request:
-        branches: [main]
-
-permissions:
-    contents: write
-    pages: write
+  schedule:
+    - cron: '0 */2 * * *'
+  workflow_dispatch:
 
 jobs:
-    lint-and-format:
-        name: Lint and Format Check
-        runs-on: ubuntu-latest
+  ui_tests:
+    name: UI Tests (${{ matrix.spec }})
+    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        spec: 
+          - filter.spec.js
+          - language.spec.js
+          - search.spec.js
+          - user-access-management.spec.js
 
-        steps:
-            - name: Checkout Code
-              uses: actions/checkout@v4
+    steps:
+      - name: Checkout Code
+        uses: actions/checkout@v4
 
-            - name: Setup Node
-              uses: actions/setup-node@v4
-              with:
-                  node-version: '22'
-                  cache: 'npm'
+      - name: Setup Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: '22'
+          cache: 'npm'
 
-            - name: Install Dependencies
-              run: npm ci
+      - name: Install Dependencies
+        run: npm ci
 
-            - name: Run Prettier
-              run: npm run format
-            
-            - name: Run Eslint
-              run: npm run lint
-    ui_tests:
-        name: UI Tests (${{ matrix.spec }})
-        runs-on: ubuntu-latest
-        strategy:
-            fail-fast: false
-            matrix:
-                spec:
-                    - filter.spec.js
-                    - language.spec.js
-                    - search.spec.js
-                    - user-access-management.spec.js
+      - name: Run UI Tests
+        run: npm run test:ui -- --spec test/specs/${{ matrix.spec }}
 
-        steps:
-            - name: Checkout Code
-              uses: actions/checkout@v4
+      - name: Upload UI Test Reports
+        uses: actions/upload-artifact@v4
+        if: failure()
+        with:
+          name: ui-test-reports-${{ matrix.spec }}
+          path: reports/
 
-            - name: Setup Node
-              uses: actions/setup-node@v4
-              with:
-                  node-version: '22'
-                  cache: 'npm'
+  api_tests:
+    name: API Tests
+    runs-on: ubuntu-latest
 
-            - name: Install Dependencies
-              run: npm ci
+    steps:
+      - name: Checkout Code
+        uses: actions/checkout@v4
 
-            - name: Run UI Tests
-              run: npm run test:ui -- --spec test/specs/${{ matrix.spec }}
-              continue-on-error: true
+      - name: Setup Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: '22'
+          cache: 'npm'
 
-            - name: Upload Allure Results
-              uses: actions/upload-artifact@v4
-              if: always()
-              with:
-                  name: allure-results-${{ matrix.spec }}
-                  path: reports/allure-results/
-                  retention-days: 5
+      - name: Install Dependencies
+        run: npm ci
 
-    generate_report:
-        name: Generate Allure Report
-        needs: ui_tests
-        runs-on: ubuntu-latest
-        if: always()
+      - name: Run API Tests
+        run: npm run test:api
 
-        steps:
-            - name: Checkout Code
-              uses: actions/checkout@v4
-
-            - name: Download All Allure Results
-              uses: actions/download-artifact@v4
-              with:
-                  path: allure-results
-                  pattern: allure-results-*
-                  merge-multiple: true
-
-            - name: Get Allure History
-              run: |
-                  git fetch origin gh-pages --depth=1 || true
-                  if git branch -r | grep -q 'origin/gh-pages'; then
-                    git checkout gh-pages -- . || true
-                    mkdir -p allure-history
-                    cp -r . allure-history/ 2>/dev/null || true
-                  fi
-              continue-on-error: true
-
-            - name: Generate Allure Report
-              uses: simple-elf/allure-report-action@master
-              if: always()
-              with:
-                  allure_results: allure-results
-                  allure_history: allure-history
-                  keep_reports: 20
-
-            - name: Deploy to GitHub Pages
-              uses: peaceiris/actions-gh-pages@v4
-              if: always()
-              with:
-                  github_token: ${{ secrets.GITHUB_TOKEN }}
-                  publish_branch: gh-pages
-                  publish_dir: allure-history
-
-    api_tests:
-        name: API Tests
-        runs-on: ubuntu-latest
-
-        steps:
-            - name: Checkout Code
-              uses: actions/checkout@v4
-
-            - name: Setup Node
-              uses: actions/setup-node@v4
-              with:
-                  node-version: '22'
-                  cache: 'npm'
-
-            - name: Install Dependencies
-              run: npm ci
-
-            - name: Run API Tests
-              run: npm run test:api
+      - name: Upload API Test Reports
+        uses: actions/upload-artifact@v4
+        if: failure()
+        with:
+          name: api-test-reports
+          path: reports/
