--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
         "@eslint/js": "^9.39.2",
         "@wdio/allure-reporter": "^9.20.0",
         "@wdio/cli": "^9.20.0",
+        "@wdio/cucumber-framework": "^9.21.0",
         "@wdio/devtools-service": "^10.0.1",
         "@wdio/junit-reporter": "^9.20.0",
         "@wdio/local-runner": "^9.20.0",
